helm-charts/redash/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: dev-internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /ping
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:232720106935:certificate/ba002c46-9621-4f48-8746-50132d2d98d1
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=Development,Team=DevOps
  name: external
  namespace: gauravns
spec:
  rules:
  - host: redash.punchh.com
    http:
      paths:
      - backend:
          serviceName: my-release-redash
          servicePort: 80
